--- a/portfolio.html
+++ b/portfolio.html
@@ -1,28 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
 
-    <!-- Bootstrap -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <title>Christopher Lin Bootstrap Portfolio</title>
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
+  <!-- Bootstrap -->
+  <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
+</head>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="assets/js/bootstrap.min.js"></script>
-  </body>
+<body>
+
+  <nav class="navbar navbar-default" role="navigation">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
+          aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Christopher Lin</a>
+      </div>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+            <a href="index.html">About</a>
+          </li>
+          <li>
+            <a href="portfolio.html">Portfolio</a>
+          </li>
+          <li class="active">
+            <a href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8">
+        <h2>Portfolio</h1>
+  
+          <h3>portfolio images go here</h3>
+          <div class="container">
+            <div class="row">
+              <div class="col-md-4">
+                <img src="assets/images/abstract-q-c-250-200-7.jpg" alt="Never" class="img-responsive" width="250" height="200">
+              </div>
+              <div class="col-md-4">
+                <img src="assets/images/food-q-c-250-200-3.jpg" alt="Gonna" class="img-responsive" width="250" height="200">
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-4">
+                <img src="assets/images/people-q-c-250-200-2.jpg" alt="Give" class="img-responsive" width="250" height="200">
+              </div>
+              <div class="col-md-4">
+                <img src="assets/images/people-q-c-250-200-9.jpg" alt="You" class="img-responsive" width="250" height="200">
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-4">
+                <img src="assets/images/transport-q-c-250-200-8.jpg" alt="Up" class="img-responsive" width="250" height="200">
+              </div>
+            </div>
+          </div>
+
+
+
+      </div>
+      <div class="col-md-4">
+        <h2>Connect with me</h2>
+        <a href="https://github.com/cslin82">
+          <img src="assets/images/github64.png" alt="GitHub" height="64" width="64">
+        </a>
+        <a href="https://www.linkedin.com/in/chris-lin-58b8895">
+          <img src="assets/images/linkedin64.png" alt="LinkedIn" height="64" width="64">
+        </a>
+        </p>
+      </div>
+
+    </div>
+  </div>
+
+  </div>
+  <!-- /.navbar-collapse -->
+  </div>
+  <!-- /.container-fluid -->
+
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="assets/js/bootstrap.min.js"></script>
+</body>
+
 </html>
