--- a/index.html
+++ b/index.html
@@ -55,17 +55,26 @@
     <div class="row">
       <div class="col-md-8">
         <h2>About Me</h1>
-        <p class="lead">
-            <img class="img-responsive" πsrc="assets/images/chris-halloween.jpg" alt="Chris at Halloween" width="200" height="250" class="">
-          Chris Lin is a student in the February 2018 cohort of the GW Coding Boot Camp.</p>
-        <p>In past chapters I have been a mechanical engineer, a scientist, and a photographer. This is my second year in the
-          Washington, DC area, the furthest north I have ever lived. Before here, I lived in Texas and Louisiana.</p>
-        <p>Most anticipated upcoming TV show:
-          <a href="https://www.hbo.com/westworld">Westworld Season 2</a>
-        </p>
-        <p>Ongoing game obsession:
-          <a href="https://kerbalspaceprogram.com/">Kerbal Space Program</a>
-        </p>
+
+          <div class="media">
+            <div class="media-left media-top">
+              <img class="img-responsive" src="assets/images/chris-halloween.jpg" alt="Chris at Halloween" width="200" height="250">
+            </div>
+            <div class="media-body">
+              <p class="lead">
+
+                Chris Lin is a student in the February 2018 cohort of the GW Coding Boot Camp.</p>
+              <p>In past chapters I have been a mechanical engineer, a scientist, and a photographer. This is my second year
+                in the Washington, DC area, the furthest north I have ever lived. Before here, I lived in Texas and Louisiana.</p>
+              <p>Most anticipated upcoming TV show:
+                <a href="https://www.hbo.com/westworld">Westworld Season 2</a>
+              </p>
+              <p>Ongoing game obsession:
+                <a href="https://kerbalspaceprogram.com/">Kerbal Space Program</a>
+              </p>
+            </div>
+          </div>
+
       </div>
       <div class="col-md-4">
         <h2>Connect with me</h2>
